hermes/vendor/datatest-stable/tests/compile-fail/root-not-ident.rs
datatest_stable::harness! {
    { test = my_test, "xyz" = foo }
}
